--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,6 @@
   src: url("../fonts/SourceCodePro-Regular.ttf") format("truetype");
 }
 
-
 /* Needed to overwirte default bootstrap font */
 body {
   font-family: "montserrat-md", sans-serif !important;
@@ -40,7 +39,7 @@ body {
 
 /* custom color transparency (same as background) */
 .transparent-custom-color {
-  background: rgba(24, 24, 24, 0.7); 
+  background: rgba(24, 24, 24, 0.7);
 }
 
 /* pushing main text section to bottom */
@@ -68,7 +67,6 @@ body {
   font-size: 3rem;
 }
 
-
 /* adding a margin between about me section and other sections */
 #about-me .container {
   margin-top: 10vh;
@@ -76,8 +74,10 @@ body {
 }
 
 /* added a margin bottom to every section */
-#services, #tecnologies, #portfolio {
-    margin-bottom: 10vh;
+#services,
+#tecnologies,
+#portfolio {
+  margin-bottom: 10vh;
 }
 
 /* disabled text decoration to links */
@@ -95,5 +95,3 @@ a:active {
   align-items: center;
   justify-content: center;
 }
-
-
