--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,3 +101,54 @@ a:active {
   margin-bottom: 1rem;
   
 }
+
+
+
+
+
+.card:hover .details {
+  opacity: 1;
+  height: 100%;
+}
+
+.details {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+.details h4 {
+  margin: 0;
+}
+
+.details p {
+  margin: 2px 0;
+  font-size: 10px;
+}
+
+.social-icons {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-icons li {
+  margin: 0 10px;
+}
+
+.social-icons li a {
+  color: deepskyblue;
+}
+
